  * Add support for Debian LTS (Closes: #782685)
  * Depend on distro-info-data (>= 0.46), with extra columns for
    Debian LTS and Ubuntu ESM.
  * Ignore W503 warnings from flake8, they are PEP-8 incompatible.
  * Handle currently unknown columns in CSV data.
  * Drop old Breaks+Replaces on ubuntu-dev-tools, no longer needed.
  * Reorganise help into a slightly more logical order.

  [ Brian Murray ]
  * Provide support for the milestone eol-esm and add filters for
    supported-esm to ubuntu-distro-info along with the python and perl
    modules. (LP: #1808038)
  * Only include LTS releases when filtering by supported-esm.

  [ Steve Langasek ]
  * Override uninteresting flake8 warnings about imports and doc strings.
  * Don't run tests over the distro_info_test directory, which is pointless
    and recursive.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 27 Jan 2021 19:46:16 -0700

distro-info (0.24) unstable; urgency=medium

  * Fix issues found by pylint 2.6.0 (Closes: #971094)
  * Blacken Python code
  * python: Define sets directly
  * Bump Standards-Version to 4.5.0
  * Switch to debhelper 13

 -- Benjamin Drung <bdrung@debian.org>  Mon, 28 Sep 2020 19:36:32 +0200

distro-info (0.23) unstable; urgency=medium

  * Drop python2 support; Closes: #943052, #936408

 -- Sandro Tosi <morph@debian.org>  Wed, 08 Jan 2020 23:06:26 -0500

distro-info (0.22) unstable; urgency=medium

  * Drop testing Python 2 code with Pylint
  * Rename build dependency pylint3 to pylint (Closes: #940178)
  * Switch to debhelper 12
  * Bump Standards-Version to 4.4.0 (no changes needed)

 -- Benjamin Drung <bdrung@debian.org>  Sat, 14 Sep 2019 15:44:13 +0200

distro-info (0.21) unstable; urgency=medium

  [ Benjamin Drung ]
  * Fix spelling mistake of exactly.
    Thanks to Brian Murray <brian@ubuntu.com> (Closes: #921581)
  * Bump Standards-Version to 4.3.0 (no changes needed)

  [ Balint Reczey ]
  * Support getting release version by codename in the Perl and Python API